  [Michele Simionato]
  * Fixed a bug with the export of UHS curves with `--exports=xml`
  * Reduced substantially the data transfer and the memory occupation
    for event based calculations with a large number of assets: we
    can run the California exposure with half million assets now
  * Fixed a bug in the SESCollection exporter
  * Changed the asset<->epsilons association: before for a given taxonomy the
    assets were ordered by `asset_ref`, now they are ordered by `id`. This
    has a minor impact on the numbers sensitive to the epsilons, akin to a
    change of seeds
  * Added a test on the ordering of the epsilons
  * Accepted `.` and `|` as valid characters for source IDs
  * Changed the GMF calculator to use a single seed per unique rupture
  * Change the SESCollection exporter: now a single file is exported, before
    we were exporting one file per source model path per tectonic region model
  * Changed the event based calculators to avoid duplicating ruptures
    occurring more than once
  * Changed the risk calculators to work in blocks of assets on the same site
  * Made it possible to set different integration distances for different
    tectonic region types
  * Optimized the aggregation by asset in the event based risk calculator
  * Reporting the source_id when the filtering fails

python-oq-risklib (0.12.1-0~precise01) precise; urgency=low

  [Michele Simionato]
  * Improved the validation of NRML files

 -- Matteo Nastasi (GEM Foundation) <nastasi@openquake.org>  Thu, 17 Mar 2016 14:29:04 +0100

python-oq-risklib (0.12.0-0~precise01) precise; urgency=low

  [Michele Simionato]
  * Reduced the data transfer for the average losses by a factor of 2
    insured_losses is false in the event based risk calculator
  * Fixed the uniform hazard spectra CSV export and used a more consistent
    format
  * Fixed a 32 bit/64 bit casting error for risk computations with a site model
    starting from a non-empty datastore