@@ -1,11 +1,11 @@
-rup_id,loss
-0,9.563875E+02
-1,1.376443E+02
-2,6.358984E+02
-3,5.026803E+02
-4,1.917473E+02
-5,7.406331E+01
-6,2.400379E+03
-7,1.120086E+03
-8,1.011425E+02
-9,1.931357E+02
+etag,loss
+col=00~ses=0001~src=1~rup=2-01,9.563875E+02
+col=00~ses=0001~src=2~rup=7-01,1.376443E+02
+col=00~ses=0002~src=1~rup=1-01,6.358984E+02
+col=00~ses=0002~src=1~rup=2-01,5.026803E+02
+col=00~ses=0002~src=2~rup=9-01,1.917473E+02
+col=00~ses=0003~src=2~rup=9-01,7.406331E+01
+col=00~ses=0005~src=1~rup=2-01,2.400379E+03
+col=00~ses=0005~src=2~rup=8-01,1.120086E+03
+col=00~ses=0006~src=2~rup=8-01,1.011425E+02
+col=00~ses=0007~src=2~rup=7-01,1.931357E+02
