@@ -1,26 +1,26 @@
-rup_id,loss,loss_ins
-0,9.563875E+02,2.063875E+02
-1,7.520026E+01,0.000000E+00
-2,2.590301E+02,0.000000E+00
-3,5.026831E+02,0.000000E+00
-4,1.917473E+02,0.000000E+00
-5,7.406331E+01,0.000000E+00
-6,2.130844E+03,5.518280E+02
-7,2.399586E+03,1.649586E+03
-8,1.820339E+02,0.000000E+00
-9,1.747115E+02,0.000000E+00
-10,1.398954E+02,0.000000E+00
-11,6.822052E+02,4.833187E+01
-12,8.656286E+02,1.156286E+02
-13,1.328672E+02,0.000000E+00
-14,1.387170E+03,6.000000E+02
-15,5.966121E+02,0.000000E+00
-16,2.474193E+02,0.000000E+00
-17,2.312782E+03,5.060369E+02
-18,1.082526E+02,0.000000E+00
-19,6.014370E+02,0.000000E+00
-20,8.883304E+02,3.676617E+02
-21,1.823766E+02,0.000000E+00
-23,1.490397E+02,0.000000E+00
-24,7.275772E+02,0.000000E+00
-25,2.052152E+02,0.000000E+00
+etag,loss,loss_ins
+col=00~ses=0001~src=1~rup=2-01,9.563875E+02,2.063875E+02
+col=00~ses=0001~src=2~rup=7-01,7.520026E+01,0.000000E+00
+col=00~ses=0002~src=1~rup=1-01,2.590301E+02,0.000000E+00
+col=00~ses=0002~src=1~rup=2-01,5.026831E+02,0.000000E+00
+col=00~ses=0002~src=2~rup=9-01,1.917473E+02,0.000000E+00
+col=00~ses=0003~src=2~rup=9-01,7.406331E+01,0.000000E+00
+col=00~ses=0003~src=3~rup=14-01,2.130844E+03,5.518280E+02
+col=00~ses=0005~src=1~rup=2-01,2.399586E+03,1.649586E+03
+col=00~ses=0005~src=2~rup=8-01,1.820339E+02,0.000000E+00
+col=00~ses=0006~src=2~rup=8-01,1.747115E+02,0.000000E+00
+col=00~ses=0007~src=2~rup=7-01,1.398954E+02,0.000000E+00
+col=00~ses=0010~src=3~rup=14-01,6.822052E+02,4.833187E+01
+col=00~ses=0011~src=1~rup=1-01,8.656286E+02,1.156286E+02
+col=00~ses=0013~src=2~rup=8-01,1.328672E+02,0.000000E+00
+col=00~ses=0013~src=3~rup=13-01,1.387170E+03,6.000000E+02
+col=00~ses=0014~src=1~rup=1-01,5.966121E+02,0.000000E+00
+col=00~ses=0014~src=1~rup=1-02,2.474193E+02,0.000000E+00
+col=00~ses=0014~src=3~rup=15-01,2.312782E+03,5.060369E+02
+col=00~ses=0015~src=2~rup=8-01,1.082526E+02,0.000000E+00
+col=00~ses=0015~src=3~rup=13-01,6.014370E+02,0.000000E+00
+col=00~ses=0016~src=3~rup=13-01,8.883304E+02,3.676617E+02
+col=00~ses=0017~src=1~rup=1-01,1.823766E+02,0.000000E+00
+col=00~ses=0019~src=2~rup=7-01,1.490397E+02,0.000000E+00
+col=00~ses=0020~src=1~rup=1-01,7.275772E+02,0.000000E+00
+col=00~ses=0020~src=2~rup=7-01,2.052152E+02,0.000000E+00
