@@ -1,18 +1,18 @@
-rup_id,loss
-0,7.249250E+04
-4,9.858155E+04
-5,2.300370E+05
-6,8.890071E+05
-7,1.034389E+05
-8,1.183533E+05
-9,7.233523E+05
-10,1.406486E+06
-11,2.887584E+06
-12,1.616547E+05
-13,1.255282E+05
-14,1.097056E+05
-15,8.070550E+04
-16,6.088879E+05
-17,2.164726E+05
-18,1.265054E+06
-19,1.871771E+06
+etag,loss
+col=05~ses=0001~src=AS_TRAS334~rup=612021-01,7.249250E+04
+col=05~ses=0001~src=AS_TRAS334~rup=619044-01,9.858155E+04
+col=05~ses=0001~src=AS_TRAS334~rup=620781-01,2.300370E+05
+col=05~ses=0001~src=AS_TRAS360~rup=628979-01,8.890071E+05
+col=05~ses=0001~src=AS_TRAS360~rup=629315-01,1.034389E+05
+col=05~ses=0001~src=AS_TRAS360~rup=629891-01,1.183533E+05
+col=05~ses=0001~src=AS_TRAS360~rup=630906-01,7.233523E+05
+col=05~ses=0001~src=AS_TRAS360~rup=631334-01,1.406486E+06
+col=05~ses=0001~src=AS_TRAS360~rup=631535-01,2.887584E+06
+col=05~ses=0001~src=AS_TRAS360~rup=634119-01,1.616547E+05
+col=05~ses=0001~src=AS_TRAS395~rup=634692-01,1.255282E+05
+col=05~ses=0001~src=AS_TRAS395~rup=636036-01,1.097056E+05
+col=05~ses=0001~src=AS_TRAS395~rup=636084-01,8.070550E+04
+col=05~ses=0001~src=AS_TRAS395~rup=636085-01,6.088879E+05
+col=05~ses=0001~src=AS_TRAS395~rup=636516-01,2.164726E+05
+col=05~ses=0001~src=AS_TRAS395~rup=636957-01,1.265054E+06
+col=05~ses=0001~src=AS_TRAS395~rup=637049-01,1.871771E+06
