@@ -1,18 +1,18 @@
-rup_id,loss
-4,2.674692E+05
-5,2.570371E+05
-6,1.071208E+06
-7,6.799005E+05
-8,4.838895E+05
-9,2.713228E+06
-10,1.453845E+06
-11,4.298827E+05
-12,8.116016E+04
-13,1.191527E+05
-14,6.801805E+04
-15,6.794111E+04
-16,3.795291E+05
-17,2.782970E+05
-18,6.790933E+05
-19,2.296042E+06
-22,2.438820E+02
+etag,loss
+col=05~ses=0001~src=AS_TRAS334~rup=619044-01,2.674692E+05
+col=05~ses=0001~src=AS_TRAS334~rup=620781-01,2.570371E+05
+col=05~ses=0001~src=AS_TRAS360~rup=628979-01,1.071208E+06
+col=05~ses=0001~src=AS_TRAS360~rup=629315-01,6.799005E+05
+col=05~ses=0001~src=AS_TRAS360~rup=629891-01,4.838895E+05
+col=05~ses=0001~src=AS_TRAS360~rup=630906-01,2.713228E+06
+col=05~ses=0001~src=AS_TRAS360~rup=631334-01,1.453845E+06
+col=05~ses=0001~src=AS_TRAS360~rup=631535-01,4.298827E+05
+col=05~ses=0001~src=AS_TRAS360~rup=634119-01,8.116016E+04
+col=05~ses=0001~src=AS_TRAS395~rup=634692-01,1.191527E+05
+col=05~ses=0001~src=AS_TRAS395~rup=636036-01,6.801805E+04
+col=05~ses=0001~src=AS_TRAS395~rup=636084-01,6.794111E+04
+col=05~ses=0001~src=AS_TRAS395~rup=636085-01,3.795291E+05
+col=05~ses=0001~src=AS_TRAS395~rup=636516-01,2.782970E+05
+col=05~ses=0001~src=AS_TRAS395~rup=636957-01,6.790933E+05
+col=05~ses=0001~src=AS_TRAS395~rup=637049-01,2.296042E+06
+col=05~ses=0001~src=AS_TRAS458~rup=644183-01,2.438820E+02
