@@ -1,18 +1,18 @@
-rup_id,loss
-0,1.257361E+05
-4,1.243356E+05
-5,3.074986E+05
-6,1.254968E+06
-7,1.565857E+05
-8,1.733594E+05
-9,8.700503E+05
-10,2.243470E+06
-11,3.289968E+06
-12,2.049911E+05
-13,1.663861E+05
-14,1.268812E+05
-15,9.806631E+04
-16,6.331391E+05
-17,2.440695E+05
-18,1.398727E+06
-19,2.858289E+06
+etag,loss
+col=05~ses=0001~src=AS_TRAS334~rup=612021-01,1.257361E+05
+col=05~ses=0001~src=AS_TRAS334~rup=619044-01,1.243356E+05
+col=05~ses=0001~src=AS_TRAS334~rup=620781-01,3.074986E+05
+col=05~ses=0001~src=AS_TRAS360~rup=628979-01,1.254968E+06
+col=05~ses=0001~src=AS_TRAS360~rup=629315-01,1.565857E+05
+col=05~ses=0001~src=AS_TRAS360~rup=629891-01,1.733594E+05
+col=05~ses=0001~src=AS_TRAS360~rup=630906-01,8.700503E+05
+col=05~ses=0001~src=AS_TRAS360~rup=631334-01,2.243470E+06
+col=05~ses=0001~src=AS_TRAS360~rup=631535-01,3.289968E+06
+col=05~ses=0001~src=AS_TRAS360~rup=634119-01,2.049911E+05
+col=05~ses=0001~src=AS_TRAS395~rup=634692-01,1.663861E+05
+col=05~ses=0001~src=AS_TRAS395~rup=636036-01,1.268812E+05
+col=05~ses=0001~src=AS_TRAS395~rup=636084-01,9.806631E+04
+col=05~ses=0001~src=AS_TRAS395~rup=636085-01,6.331391E+05
+col=05~ses=0001~src=AS_TRAS395~rup=636516-01,2.440695E+05
+col=05~ses=0001~src=AS_TRAS395~rup=636957-01,1.398727E+06
+col=05~ses=0001~src=AS_TRAS395~rup=637049-01,2.858289E+06
