@@ -1,18 +1,18 @@
-rup_id,loss
-0,9.964494E+03
-4,1.523161E+05
-5,4.497588E+05
-6,1.062316E+06
-7,1.724855E+05
-8,2.014090E+05
-9,9.295170E+05
-10,1.581208E+06
-11,2.655605E+06
-12,2.466821E+05
-13,2.406786E+05
-14,1.844290E+05
-15,1.396617E+05
-16,8.870719E+05
-17,3.668952E+05
-18,1.402018E+06
-19,2.494044E+06
+etag,loss
+col=05~ses=0001~src=AS_TRAS334~rup=612021-01,9.964494E+03
+col=05~ses=0001~src=AS_TRAS334~rup=619044-01,1.523161E+05
+col=05~ses=0001~src=AS_TRAS334~rup=620781-01,4.497588E+05
+col=05~ses=0001~src=AS_TRAS360~rup=628979-01,1.062316E+06
+col=05~ses=0001~src=AS_TRAS360~rup=629315-01,1.724855E+05
+col=05~ses=0001~src=AS_TRAS360~rup=629891-01,2.014090E+05
+col=05~ses=0001~src=AS_TRAS360~rup=630906-01,9.295170E+05
+col=05~ses=0001~src=AS_TRAS360~rup=631334-01,1.581208E+06
+col=05~ses=0001~src=AS_TRAS360~rup=631535-01,2.655605E+06
+col=05~ses=0001~src=AS_TRAS360~rup=634119-01,2.466821E+05
+col=05~ses=0001~src=AS_TRAS395~rup=634692-01,2.406786E+05
+col=05~ses=0001~src=AS_TRAS395~rup=636036-01,1.844290E+05
+col=05~ses=0001~src=AS_TRAS395~rup=636084-01,1.396617E+05
+col=05~ses=0001~src=AS_TRAS395~rup=636085-01,8.870719E+05
+col=05~ses=0001~src=AS_TRAS395~rup=636516-01,3.668952E+05
+col=05~ses=0001~src=AS_TRAS395~rup=636957-01,1.402018E+06
+col=05~ses=0001~src=AS_TRAS395~rup=637049-01,2.494044E+06
