@@ -1,2 +1,2 @@
-rup_id,loss
-25,3.318351E+04
+etag,loss
+col=09~ses=0001~src=FSBG_TRBG103~rup=1298560-01,3.318351E+04
