@@ -1,3 +1,3 @@
-rup_id,loss
-25,1.395811E+05
-34,7.165855E+04
+etag,loss
+col=09~ses=0001~src=FSBG_TRBG103~rup=1298560-01,1.395811E+05
+col=09~ses=0001~src=FSBG_TRBG103~rup=1306893-01,7.165855E+04
